# pylastfmapi

./: .gitignore  .readthedocs.yml  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yaml
docs/: contribution.md  index.md  methods.md
docs/api/: client.md  constants.md  exceptions.md  requests.md  typehints.md
pylastfm/: client.py  constants.py  exceptions.py  request.py  settings.py  typehints.py  utils.py
pylastfmapi/: client.py  request.py  settings.py  typehints.py  utils.py
tests/: conftest.py  test_request.py
tests/client/: test_artist_methods.py  test_client.py  test_client_album_methods.py  test_client_artist_methods.py  test_client_chart_methods.py  test_client_country_methods.py  test_client_tag_methods.py  test_client_track_methods.py  test_client_user_methods.py  test_user_methods.py
tests/integration/client/: test_integration_client.py
tests/unit/: conftest.py  test_request.py  test_utils.py
tests/unit/client/: test_client_album_methods.py  test_client_artist_methods.py  test_client_chart_methods.py  test_client_country_methods.py  test_client_tag_methods.py  test_client_track_methods.py  test_client_user_methods.py
