[tool.poetry]
name = "pylastfm"
version = "0.1.0"
description = ""
authors = ["William Felipe <theorangewill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
requests-cache = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.5.5"
black = "^24.4.2"
mypy = "^1.11.1"
pytest-mypy = "^0.10.3"
types-requests = "^2.32.0.20240712"
pydantic-settings = "^2.4.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.31"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.7"
jinja2 = "^3.1.4"
pymdown-extensions = "^10.9"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'black . && ruff check . --fix && ruff format .'
mypy = 'mypy .'

pre_test = 'task lint'
test = 'pytest -s -x --cov=pylastfm -vv'
post_test = 'coverage html'

docs = 'mkdocs serve'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
